--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>AI Camp</title>
+<title>Agency Camp</title>
 <head>
 <!--  Prod Styles -->
   <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/camps-styles.css">
